fixed card spacing

--- a/src-web/components/ApplicationDeploymentHighlights/style.scss
+++ b/src-web/components/ApplicationDeploymentHighlights/style.scss
@@ -1,4 +1,6 @@
 #DeploymentHighlights {
+  margin-bottom: 5%;
+
   .deployment-highlights-header {
     font-size: 1.5em;
     padding-bottom: 10px;
