--- a/src-web/components/CountsCardModule/style.scss
+++ b/src-web/components/CountsCardModule/style.scss
@@ -14,7 +14,6 @@
   width: 100%;
   height: 180px;
   padding: 20px;
-  margin: 20px 0;
   background-color: white;
   display: flex;
   align-items: center;
@@ -27,7 +26,7 @@
 
 .card-container-content {
   display: flex;
-  padding: 0 5% 0 40px;
+  padding: 0 5%;
   width: 100%;
   height: 100%;
   justify-content: space-between;
